<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ln_adview"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_rate_app"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/rate_app"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_more_app"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/more_app"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_share_app"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/share_app"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_like_fb_fanpage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/like_facebook_fanpage"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_support"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/support_24_7"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_18" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ln_adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/str_b" />
    </LinearLayout>
</RelativeLayout>